--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,14 @@
 [build-system]
 requires = ["setuptools>=61", "Cython>=3.0", "numpy"]
 build-backend = "setuptools.backends.legacy:build"
+
+[project]
+name = "ptu_decoder"
+version = "0.0.1"
+dependencies = ["numpy"]
+
+[tool.setuptools.packages.find]
+where = ["."]
+
+[tool.setuptools.package-data]
+ptu_decoder = ["*.pyx", "*.pxd"]
